WebAdds/force-app/main/default/objects/objects/Show_Client__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Yavatmal</fullName>
            </value>
            <value>
                <fullName>China1</fullName>
            </value>
            <value>
                <fullName>China2</fullName>
            </value>
            <value>
                <fullName>America11</fullName>
            </value>
            <value>
                <fullName>America22</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>