WebAdds/force-app/main/default/objects/objects/Show_Client__c/fields/Secret_Question__c.field-meta.xml
<CustomField>
    <fullName>Secret_Question__c</fullName>
    <label>Secret Question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>What is city Name?</fullName>
            </value>
            <value>
                <fullName>What is your Birth Place?</fullName>
            </value>
            <value>
                <fullName>What is your Pet name.</fullName>
            </value>
            <value>
                <fullName>What is your Mother Name?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>