WebAdds/force-app/main/default/objects/objects/Show_Client__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>america 1</fullName>
            </value>
            <value>
                <fullName>Andhra</fullName>
            </value>
            <value>
                <fullName>Beegi</fullName>
            </value>
            <value>
                <fullName>Busan</fullName>
            </value>
            <value>
                <fullName>Maharastra</fullName>
            </value>
            <value>
                <fullName>New Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>